--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,24 +1,7 @@
 ---
-
+# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "{{ site.theme }}";
-
-.page-header {
-  background-color: #005e9e;
-  background-image: none;
-}
-
-.project-tagline {
-  opacity:1;
-}
-
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  color: #005e9e;
-  text-transform: uppercase;
-}
-
-a {
-  color: #f0aa00;
-}
-
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
