--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,17 @@ layout: base
             <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
-      {%- endif -%}</p>
+      {%- endif -%}
+      {%- if page.categories -%}
+      • {% for catergory in page.categories %}
+        <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+          <span class="p-author h-card" itemprop="name">{{ catergory }}</span></span>
+          {%- if forloop.last == false %}, {% endif -%}
+      {% endfor %}
+      {%- endif -%}
+    
+    
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
