--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,8 @@ layout: base
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
       {%- endif -%}
-      {%- if page.categories -%}
-      • {% for catergory in page.categories %}
+      {%- if page.category -%}
+      • {% for catergory in page.category %}
         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
           <span class="p-author h-card" itemprop="name">{{ catergory }}</span></span>
           {%- if forloop.last == false %}, {% endif -%}
