--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,12 @@ layout: base
       {%- for post in posts -%}
       <li>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
+        {%- if page.category -%}
+         • {% for catergory in page.category %}
+          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+            <span class="p-author h-card" itemprop="name">{{ catergory }}</span></span>
+            {%- if forloop.last == false %}, {% endif -%}
+        {% endfor %}
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
