--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,8 +26,8 @@ layout: base
       {%- for post in posts -%}
       <li>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
-        {%- if page.category -%}
-         • {% for catergory in page.category %}
+        {%- if post.category -%}
+         • {% for catergory in post.category %}
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span class="p-author h-card" itemprop="name">{{ catergory }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
