--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,11 +27,20 @@ layout: base
       <li>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <span class="post-meta">{{ post.category }}</span>
+
+        {%- if page.category -%}
+         • {% for category in page.category %}{{ category }}
+         {%- if forloop.last == false %}, {% endif -%}
+          {% endfor %}
+        {%- endif -%}
+
+
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
         </h3>
+      
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
