--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,19 @@
 layout: base
 ---
 
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+
+</article>
+
+
 <div id="archives">
     {% for category in site.categories %}
       <div class="archive-group">
